--- a/public/chat.html
+++ b/public/chat.html
@@ -58,6 +58,20 @@
         </div>
     </script>
 
+	<script id="file-message-template" type="text/html">
+        <div class="message">
+            <p>
+                <span class="message__name">{{username}}</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <div class="info-container">
+				<img src="/img/file.png">
+				<span>{{file_name}}</span>
+				<span class="download-button" onclick="downloadBase64('{{url}}')">Download</span>
+			</div>
+        </div>
+    </script>
+	
     <script id="sidebar-template" type="text/html">
         <h2 class="room-title">{{room}}</h2>
         <h3 class="list-title">Users</h3>
